4/24/11 removed PinnedLayoutNode, closes #2825
4/25/11 Removed 'CVS Info' headers and revision text annotations from class headers in piccolo-phet
4/24/11 Added layout nodes VBox, HBox and their parent Box (moved from bending light)
4/23/11 Generalized MinimizeMaximizeNode to support different images, for use with different backgrounds, see #2824
4/22/11 Refactored measuring tape to facilitate resetting
4/14/11 fix Wavelength control so that it doesn't throw exception when using up/down arrow at the ends of the slider range
4/8/11 Reformatted according to PhET's IntelliJ code style
4/7/2011 Made it possible to override the getControlPanelBounds strategy
3/29/2011 #2375, delete PhET's version of SwingLayoutNode, convert PinnedLayoutNode to use Piccolo's version
3/22/2011 Added VelocitySensorNode and related classes and assets from Bending Light for reuse in Fluid Pressure and Flow
3/21/2011 Added improved measuring tape image and converted gravity-and-orbits to use it, see #2785
3/16/2011 Added a type safe child iterator to PhetPNode
Migrated ThreeImageNode from Fluid Pressure and Flow
3/1/11 #2763, Removed UnsupportedOperationException when not showing the full visible spectrum
2/28/11 add PNodeLayoutUtils.alignInside, with test app TestAlignInside
Changed the background color for ControlPanelNode
2/23/11 #2753, moved color to PhetColorScheme
2/23/2011 Changed measuring tape cross hair color from red to Color( 255, 85, 0 ) to improve color blind support, see #2753
2/15/11 Moved WavelengthControl and TestWavelengthControl to piccolo-phet
Added JComboBox to the list of ignored types in ControlPanelNode.transparifySwing
Added the ability to change units in the measuring tape
Made it possible to specify colors in FloatingClockControlNode
Fixed: Gravity and Orbits string appears in FloatingClockControlNode
Made the time readout and reset button optional in FloatingClockControlNode
1/24/2011 #2678, fix RulerNode so that it's not doing odd things to its bounds