@@ -6,6 +6,7 @@ import java.util.HashMap;
 import javax.swing.event.ChangeEvent;
 import javax.swing.event.ChangeListener;
 
+import edu.colorado.phet.common.phetcommon.model.property.Property;
 import edu.colorado.phet.common.phetcommon.model.property.ValueEquals;
 import edu.colorado.phet.common.phetcommon.util.SimpleObserver;
 import edu.colorado.phet.common.phetcommon.util.function.VoidFunction1;
@@ -32,31 +33,43 @@ import static java.awt.Color.black;
  * @author Sam Reid
  */
 public class FluidDensityControl<T extends FluidPressureAndFlowModel> extends PNode {
+    private final UnitFluidDensityControl<T> metricControl;//Control when in metric units
+    private final UnitFluidDensityControl<T> englishControl;//Control when in English units
+
     public FluidDensityControl( final FluidPressureAndFlowModule<T> module ) {
         //This Property indicates whether units are in metric or not.
         final ValueEquals<UnitSet> metricUnits = new ValueEquals<UnitSet>( module.getFluidPressureAndFlowModel().units, METRIC );
 
         //Create and add the metric control, but only show it if the units are in metric
-        addChild( new UnitFluidDensityControl<T>( module, METRIC.density ) {{
+        metricControl = new UnitFluidDensityControl<T>( module, METRIC.density ) {{
             metricUnits.addObserver( new VoidFunction1<Boolean>() {
                 public void apply( Boolean metricUnits ) {
                     setVisible( metricUnits );
                 }
             } );
-        }} );
+        }};
+        addChild( metricControl );
 
         //Create and add the English unit control, but only show it if the units are in English
-        addChild( new UnitFluidDensityControl<T>( module, ENGLISH.density ) {{
+        englishControl = new UnitFluidDensityControl<T>( module, ENGLISH.density ) {{
             metricUnits.addObserver( new VoidFunction1<Boolean>() {
                 public void apply( Boolean metricUnits ) {
                     setVisible( !metricUnits );
                 }
             } );
-        }} );
+        }};
+        addChild( englishControl );
+    }
+
+    public double getMaximumHeight() {
+        return metricControl.getMaximumHeight();
     }
 
     public static class UnitFluidDensityControl<T extends FluidPressureAndFlowModel> extends PNode {
+        private Property<Boolean> fluidDensityControlVisible;
+
         public UnitFluidDensityControl( final FluidPressureAndFlowModule<T> module, Unit density ) {
+            fluidDensityControlVisible = module.fluidDensityControlVisible;
             //Compute the tick marks in the specified units
             final double gasDensity = density.siToUnit( GASOLINE_DENSITY );
             final double honeyDensity = density.siToUnit( HONEY_DENSITY );
@@ -71,7 +84,7 @@ public class FluidDensityControl<T extends FluidPressureAndFlowModel> extends PN
                     }} ) {{
                 module.fluidDensityControlVisible.addObserver( new SimpleObserver() {
                     public void update() {
-                        setVisible( module.fluidDensityControlVisible.getValue() );
+                        setVisible( fluidDensityControlVisible.getValue() );
                     }
                 } );
             }};
@@ -95,8 +108,27 @@ public class FluidDensityControl<T extends FluidPressureAndFlowModel> extends PN
             }};
 
             //Add children
-            addChild( fluidDensityControl );
+            addChild( new NoBoundsWhenInvisible( fluidDensityControl ) );
             addChild( minimizeMaximizeNode );
         }
+
+        //Find the size of this component when the slider is visible
+        public double getMaximumHeight() {
+            //Store the original value
+            boolean visible = fluidDensityControlVisible.getValue();
+
+            //Enable the slider visibility
+            fluidDensityControlVisible.setValue( true );
+
+            //Find the value we were looking for
+            final double height = getFullBounds().getHeight();
+
+            //Restore the old value; single threaded so nobody will notice a flicker
+            fluidDensityControlVisible.setValue( visible );
+
+            //return the height of this component when slider is showing
+            return height;
+        }
     }
+
 }
